[package]
name = "let-else"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["let-else", "macro", "syntax", "qol"]
repository = "https://github.com/tnthung/let-else"
description = "A procedural macro that enhance the `let-else` syntax in Rust."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
